Closed Bug 41165 Opened 24 years ago Closed 24 years ago

FileURL in getFolder results in Crash on Linux

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: depman1, Assigned: dveditz)

Details

(Keywords: crash, Whiteboard: [nsbeta2+] ETA: 7/20)

Linux only. build 2000-05-31-08.
1. Go to http://jimbob/trigger3.html
2. Enter badurl.xpi in the URL field. contains this segment:
 f = getFolder("file:///", "u/yourname"). no lead forward slash.
3. Trigger. OK.
Result: crash. no talkback.
Expected: -225 extraction error is fine.
Notes: If we put lead slash in the getFolder path (/u/yourname), it will return 
-225 which is OK since the pathway doesn't exist. If we change it to a real 
pathway, then it will install OK as long as there's a lead slash.
And of course the leading slash is wrong wrong wrong, because 
getFolder("file:///","/u") would logically result in file:////u -- that is, 
four slashes.

Crash with no talkback? Wow, hard to imagine pointing at the wrong place doing 
that much damage -- better not let the script kiddies know about this :-)
Nominating for nsbeta2 -- this sounds like a trivial thing to fix, and I really 
don't want people to start writing scripts with incorrect syntax that will 
break in PR3.
Keywords: nsbeta2
changed summary. After talking with Dan, the URL is valid w/o the lead slash, 
invalid with it. This is a case where "bad" is really "good"!
Summary: FileURL in getFolder w/o lead slash results in Crash on Linux → FileURL in getFolder results in Crash on Linux
[nsbeta2+]
Whiteboard: [nsbeta2+]
Adding crash to keyword field.
Keywords: crash
Whiteboard: [nsbeta2+] → [nsbeta2+] ETA: 7/15
Whiteboard: [nsbeta2+] ETA: 7/15 → [nsbeta2+] ETA: 7/20
File URL's now behave properly, as they did prior to the nsIFile conversion
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Changing QA Contact to David.
QA Contact: jimmylee → depstein
fixed in linux build 2000-07-24-08-M17
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.