bug 41165, fixing getFolder("file:///"), another casualty of the conversion to nsIFile